# spoty-api

./: .dockerignore  .gitignore  Dockerfile  README.md  datatest.ipynb  docker-compose.yml  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  spoty.py
.devcontainer/: devcontainer.json  docker-compose.yml
fast_api/: main.py
fastapi/: main.py
spotify/: entrypoint.py
spotify/spoty/: core.py  models.py  utils.py
spoty/: __init__.py  entrypoint.py  main.py  models.py  spoty.py  utils.py
spoty-api/spoty/: __init__.py
src/spoty/: __init__.py  cli.py
src/spoty/api/: __init__.py  __main__.py  constants.py  core.py  entrypoint.py  log.py  main.py  models.py  serialize.py  utils.py
src/spoty/api/core/: __init__.py  spoty.py
src/spoty/api/models/: __init__.py  album.py  playlist.py  query.py  track.py
tests/unit/spotify/spoty/utils/: test_utils.py
