[project]
name = "spoty"
version = "0.2.1"
description = ""
authors = [{ name = "Gabriel Chirico", email = "Gacn40@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["spotipy==2.20.0"]


[project.urls]
repository = 'https://github.com/GaboChirico/spoty-api'

[project.scripts]
spoty = "spoty.cli:main"


[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }
packages = ["spoty"]


[tool.pdm.dev-dependencies]
formatting = ["black==21.9b0", "isort==5.9.3"]
test = ["pytest==6.2.5"]
data = ["ipykernel==6.4.1"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
